--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Project - Etch-a-Sketch</title>
+        <title>Odin Project - Calculator</title>
         <link rel="stylesheet" href="./styles.css">
         <script src="./index.js" defer></script>
     </head>
 
     <body>
+        <h1 id="page-title">Odin Project: Calculator</h1>
+        <div class="calculator">
+            <p class="display">0</p>
+            <div class="key-area">
+                <div class="num-area">
+                    <div class="num-grid">
+                        <button class="key num-key">7</button>
+                        <button class="key num-key">8</button>
+                        <button class="key num-key">9</button>
+                        <button class="key num-key">4</button>
+                        <button class="key num-key">5</button>
+                        <button class="key num-key">6</button>
+                        <button class="key num-key">1</button>
+                        <button class="key num-key">2</button>
+                        <button class="key num-key">3</button>
+                    </div>
+                    <div class="bottom-row">
+                        <button class="key num-key">0</button>
+                        <button class="key clear-key">Clear</button>
+                    </div>
+                </div>
+                <div class="operator-column">
+                    <button class="key operator-key">+</button>
+                    <button class="key operator-key">-</button>
+                    <button class="key operator-key">*</button>
+                    <button class="key operator-key">/</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
