implemented display functionality

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
             <div class="key-area">
                 <div class="num-area">
                     <div class="num-grid">
-                        <button class="key num-key">7</button>
-                        <button class="key num-key">8</button>
-                        <button class="key num-key">9</button>
-                        <button class="key num-key">4</button>
-                        <button class="key num-key">5</button>
-                        <button class="key num-key">6</button>
-                        <button class="key num-key">1</button>
-                        <button class="key num-key">2</button>
-                        <button class="key num-key">3</button>
+                        <button class="key num-key" onclick="appendDisplay('7')">7</button>
+                        <button class="key num-key" onclick="appendDisplay('8')">8</button>
+                        <button class="key num-key" onclick="appendDisplay('9')">9</button>
+                        <button class="key num-key" onclick="appendDisplay('4')">4</button>
+                        <button class="key num-key" onclick="appendDisplay('5')">5</button>
+                        <button class="key num-key" onclick="appendDisplay('6')">6</button>
+                        <button class="key num-key" onclick="appendDisplay('1')">1</button>
+                        <button class="key num-key" onclick="appendDisplay('2')">2</button>
+                        <button class="key num-key" onclick="appendDisplay('3')">3</button>
                     </div>
                     <div class="bottom-row">
-                        <button class="key num-key">0</button>
+                        <button class="key num-key" onclick="appendDisplay('0')">0</button>
                         <button class="key clear-key">Clear</button>
                     </div>
                 </div>
                 <div class="operator-column">
-                    <button class="key operator-key">+</button>
-                    <button class="key operator-key">-</button>
-                    <button class="key operator-key">*</button>
-                    <button class="key operator-key">/</button>
+                    <button class="key operator-key" onclick="appendDisplay('+')">+</button>
+                    <button class="key operator-key" onclick="appendDisplay('-')">-</button>
+                    <button class="key operator-key" onclick="appendDisplay('*')">*</button>
+                    <button class="key operator-key" onclick="appendDisplay('/')">/</button>
                 </div>
             </div>
         </div>
