added additional keys

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <button class="key operator-key" onclick="appendDisplay('*')">*</button>
                     <button class="key operator-key" onclick="appendDisplay('/')">/</button>
                 </div>
+                <div class="operator-column">
+                    <button class="key operator-key misc-key" onclick="appendDisplay('+')">=</button>
+                    <button class="key operator-key misc-key" onclick="appendDisplay('-')">back</button>
             </div>
         </div>
     </body>
