--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <button class="key operator-key" onclick="appendDisplay('/')">/</button>
                 </div>
                 <div class="operator-column">
-                    <button class="key operator-key misc-key" onclick="appendDisplay('+')">=</button>
-                    <button class="key operator-key misc-key" onclick="appendDisplay('-')">back</button>
+                    <button class="key operator-key misc-key" onclick="evaluateDisplay()">=</button>
+                    <button class="key operator-key misc-key" onclick="backspaceDisplay()">back</button>
             </div>
         </div>
     </body>
