implemented basic expression evaluator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="bottom-row">
                         <button class="key num-key" onclick="appendDisplay('0')">0</button>
-                        <button class="key clear-key">Clear</button>
+                        <button class="key clear-key" onclick="clearDisplay()">Clear</button>
                     </div>
                 </div>
                 <div class="operator-column">
